--- a/app/src/main/res/layout/description_dialog.xml
+++ b/app/src/main/res/layout/description_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="350dp"
     android:layout_height="400dp"
@@ -104,12 +104,5 @@
             android:autoSizeStepGranularity="2sp"/>
 
     </LinearLayout>
-
-
-
-
-
-
-
 
 </LinearLayout>
